# BattleSim

./: .gitignore  CMakeLists.txt  ai.cpp  ai.h  artillery.cpp  artillery.h  cavalry.cpp  cavalry.h  commander.cpp  commander.h  game.cpp  game.h  game.ui  gamemenu.cpp  gamemenu.h  gamemenu.ui  infantry.cpp  infantry.h  main.cpp  map.cpp  map.h  obstacle.cpp  obstacle.h  player.cpp  player.h  readme.md  resources.qrc  resultwidget.cpp  resultwidget.h  resultwidget.ui  river.cpp  river.h  scenario.cpp  scenario.h  settings.cpp  settings.h  swamp.cpp  swamp.h  unit.cpp  unit.h  (+2 more)
html/: _scenario_8h.html  _scenario_8h.js  _scenario_8h_source.html  ai_8cpp.html  ai_8h.html  ai_8h.js  ai_8h_source.html  annotated.html  annotated_dup.js  artillery_8cpp.html  artillery_8h.html  artillery_8h.js  artillery_8h_source.html  cavalry_8cpp.html  cavalry_8h.html  cavalry_8h.js  cavalry_8h_source.html  class_a_i-members.html  class_a_i.html  class_a_i.js  class_artillery-members.html  class_artillery.html  class_artillery.js  class_cavalry-members.html  class_cavalry.html  class_cavalry.js  class_commander-members.html  class_commander.html  class_commander.js  class_game-members.html  class_game.html  class_game.js  class_game_menu-members.html  class_game_menu.html  class_game_menu.js  class_infantry-members.html  class_infantry.html  class_infantry.js  class_map-members.html  class_map.html  (+98 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  (+30 more)
scenarios/: scenario0.txt  scenario1.txt  scenario2.txt  scenario3.txt  scenario4.txt
src/: ai.h  cavalry.cpp  commander.cpp  commander.h  game.cpp  game.h  game.ui  infantry.h  map.cpp  map.h  obstacle.cpp  obstacle.h  river.h  scenario.cpp  settings.cpp  settings.h  swamp.h  unit.cpp  unit.h  user.cpp
